--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,64 +1,79 @@
-/* ОБНУЛЕНИЕ СТИЛЕЙ */
+@import "./vars";
+
 *,
 *::before,
 *::after {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
 }
+
 li {
-    list-style: none;
+  list-style: none;
 }
+
 a,
 a:visited {
-    text-decoration: none;
+  text-decoration: none;
 }
+
 a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-    font-weight: inherit;
-    font-size: inherit;
+  font-weight: inherit;
+  font-size: inherit;
 }
+
 img {
-    vertical-align: top;
-    max-width: 100%;
+  vertical-align: top;
+  max-width: 100%;
 }
+
 html,
 body {
-    height: 100%;
+  height: 100%;
 }
+
 html {
-    font-size: 16px;
-    scroll-behavior: smooth;
+  font-size: 16px;
+  scroll-behavior: smooth;
 }
+
 body {
-    font-family: 'Montserrat', sans-serif;
-    line-height: 1;
-    color: rgba(19, 19, 19, 1);
+  font-family: "Intro Book";
+  line-height: 1;
+  color: var(--color-grey);
 }
+
 body._lock {
-    overflow:hidden;
+  overflow: hidden;
 }
+
 .wrapper {
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
-    overflow-y: hidden;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 .main {
-    flex: 1 1 auto;
+  flex: 1 1 auto;
 }
 [class*="__container"] {
-    max-width: 1340px;
-    margin: 0 auto;
-    padding: 0 15px;
+  max-width: 1330px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+.hidden {
+  display: none;
 }
 .stop-scrolling {
   height: 100%;
