--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,19 +1,13 @@
+// базовые подключения
 @import "./settings";
 @import "./mixins";
 @import "./fonts";
+@import "./vars";
 
-body {
-  font-size: 90px;
-  background-color: rgb(222, 52, 245);
-  color: white;
-}
-.main {
-  height: 100vh;
-  display: grid;
-  place-items: center;
-}
-.choma {
-  display: flex;
-  align-items: center;
-  gap: 50px;
-}
+// компоненты страницы
+
+// подключения компонентов страницы (большие компоненты)
+@import "./components/header";
+@import "./components/footer";
+
+// подключения компонентов страницы (маленькие компоненты)
